<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:layoutDirection="locale"
    android:scrollbars="none"
    tools:context=".authentication.RegisterActivity"
    tools:ignore="Overdraw">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/registrationText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/registrationText">


            <androidx.cardview.widget.CardView
                android:id="@+id/profileImageCard"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_gravity="center"
                app:cardCornerRadius="@dimen/_50sdp">


                <ImageView
                    android:id="@+id/profileImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/app_name"
                    android:scaleType="centerCrop"
                    />

            </androidx.cardview.widget.CardView>


            <EditText
                android:id="@+id/nameEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/selector_edit_text"
                android:hint="@string/full_name"
                android:importantForAutofill="no"
                android:inputType="text"
                android:layoutDirection="locale"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorTextHint"
                android:textDirection="locale" />


            <EditText
                android:id="@+id/emailEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/selector_edit_text"
                android:hint="@string/email_address"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:layoutDirection="locale"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorTextHint"
                android:textDirection="locale" />


            <EditText
                android:id="@+id/phoneEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/selector_edit_text"
                android:hint="@string/phone_number"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:layoutDirection="locale"
                android:maxLength="11"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorTextHint"
                android:textDirection="locale" />


            <EditText
                android:id="@+id/addressEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/selector_edit_text"
                android:hint="@string/address"
                android:importantForAutofill="no"
                android:inputType="text"
                android:layoutDirection="locale"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorTextHint"
                android:textDirection="locale" />


            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/male"
                    android:textColor="@color/colorWhite" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:text="@string/female"
                    android:textColor="@color/colorWhite" />
            </RadioGroup>


            <EditText
                android:id="@+id/passwordEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/selector_edit_text"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:layoutDirection="locale"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorTextHint"
                android:textDirection="locale" />


            <EditText
                android:id="@+id/categoryEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/white_border"
                android:drawableEnd="@drawable/ic_arrow_down"
                android:focusable="false"
                android:importantForAutofill="no"
                android:inputType="textNoSuggestions"
                android:padding="@dimen/_10sdp"
                android:text="@string/category"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorTextHint"
                android:textDirection="locale"
                tools:ignore="LabelFor" />

            <CheckBox
                android:id="@+id/policyCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:paddingStart="@dimen/_5sdp"
                android:paddingTop="@dimen/_12sdp"
                android:paddingEnd="@dimen/_5sdp"
                android:text="@string/policy_text"
                android:textColor="@color/colorWhite"
                android:textColorLink="@color/colorAccent"
                android:textSize="@dimen/_13ssp" />


            <Button
                android:id="@+id/registerBtn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:backgroundTint="@color/colorLightGray"
                android:enabled="false"
                android:padding="@dimen/_8sdp"
                android:text="@string/register"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"
                app:cornerRadius="@dimen/_25sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>