<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".client.activities.ClientReviewActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/backIcon"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/colorAccent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/review"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="0dp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintTop_toBottomOf="@id/topBar">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           android:padding="@dimen/_15sdp">

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/practitioner"
               android:textColor="@color/colorWhite"
               android:textSize="@dimen/_13ssp"/>

           <RatingBar
               android:id="@+id/practitionerRateBar"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:numStars="5"
               android:layout_gravity="center"
               android:stepSize="0.5"
               android:layout_marginTop="@dimen/_8sdp"/>


           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/service"
               android:layout_marginTop="@dimen/_15sdp"
               android:textColor="@color/colorWhite"
               android:textSize="@dimen/_13ssp"/>

           <RatingBar
               android:id="@+id/serviceRateBar"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:numStars="5"
               android:layout_gravity="center"
               android:stepSize="0.5"
               android:layout_marginTop="@dimen/_8sdp"/>


           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/application"
               android:layout_marginTop="@dimen/_15sdp"
               android:textColor="@color/colorWhite"
               android:textSize="@dimen/_13ssp"/>

           <RatingBar
               android:id="@+id/applicationRateBar"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:numStars="5"
               android:layout_gravity="center"
               android:stepSize="0.5"
               android:layout_marginTop="@dimen/_8sdp"/>


           <EditText
               android:id="@+id/reviewMessageEdt"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="@dimen/_20sdp"
               android:background="@drawable/yellow_border"
               android:gravity="top|start"
               android:importantForAutofill="no"
               android:inputType="textMultiLine"
               android:minLines="5"
               android:hint="@string/enter_your_review_message"
               android:textColorHint="@color/colorLightGray"
               android:paddingStart="@dimen/_10sdp"
               android:paddingTop="@dimen/_5sdp"
               android:paddingEnd="@dimen/_10sdp"
               android:paddingBottom="@dimen/_5sdp"
               android:scrollbarAlwaysDrawVerticalTrack="true"
               android:scrollbars="vertical"
               android:textColor="@color/colorWhite"
               app:layout_constraintTop_toBottomOf="@id/orderTxt"
               tools:ignore="LabelFor" />



           <Button
               android:id="@+id/sendReviewBtn"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginStart="@dimen/_25sdp"
               android:layout_marginTop="@dimen/_35sdp"
               android:layout_marginEnd="@dimen/_25sdp"
               android:backgroundTint="@color/colorAccent"
               android:padding="@dimen/_10sdp"
               android:text="@string/send_review"
               android:textColor="@color/colorWhite"
               android:textAllCaps="false"
               android:textSize="@dimen/_14ssp"
               app:cornerRadius="@dimen/_25sdp"
               app:layout_constraintTop_toBottomOf="@id/codeView" />

       </LinearLayout>

   </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>