<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".common.activities.SupportActivity"
    tools:ignore="Overdraw">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/backIcon"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/colorAccent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/support"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <EditText
        android:id="@+id/orderDetailsEdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:background="@drawable/yellow_border"
        android:drawableEnd="@drawable/ic_arrow_down"
        android:focusable="false"
        app:layout_constraintTop_toBottomOf="@id/topBar"
        android:importantForAutofill="no"
        android:inputType="textNoSuggestions"
        android:padding="@dimen/_10sdp"
        android:text="@string/select_type"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorTextHint"
        android:textDirection="locale"
        tools:ignore="LabelFor" />


    <EditText
        android:id="@+id/supportEdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:background="@drawable/yellow_border"
        android:gravity="top|start"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:minLines="10"
        android:hint="@string/type_your_message"
        android:textColorHint="@color/colorTextHint"
        android:paddingStart="@dimen/_10sdp"
        android:paddingTop="@dimen/_5sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbars="vertical"
        android:textColor="@color/colorWhite"
        app:layout_constraintTop_toBottomOf="@id/orderDetailsEdt"
        tools:ignore="LabelFor" />


    <Button
        android:id="@+id/sendMessageBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_35sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:backgroundTint="@color/colorAccent"
        android:padding="@dimen/_8sdp"
        android:text="@string/send_message"
        android:textAllCaps="false"
        android:textSize="@dimen/_14ssp"
        app:cornerRadius="@dimen/_25sdp"
        app:layout_constraintTop_toBottomOf="@id/supportEdt" />




</androidx.constraintlayout.widget.ConstraintLayout>