<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/setting_style_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/colorPrimary"
    app:cardCornerRadius="@dimen/_25sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/_25sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/languagesLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/englishImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_15sdp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_us_flag"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:gravity="center"
                android:text="@string/english"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintEnd_toEndOf="@id/englishImage"
                app:layout_constraintStart_toStartOf="@id/englishImage"
                app:layout_constraintTop_toBottomOf="@id/englishImage" />

            <ImageButton
                android:id="@+id/arabicImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_25sdp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_15sdp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_egypt"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/englishImage"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:gravity="center"
                android:text="@string/arabic"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintEnd_toEndOf="@id/arabicImage"
                app:layout_constraintStart_toStartOf="@id/arabicImage"
                app:layout_constraintTop_toBottomOf="@id/arabicImage" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/changePassBtn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            android:backgroundTint="@color/colorAccent"
            android:padding="@dimen/_8sdp"
            android:text="@string/change_password"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            app:cornerRadius="@dimen/_25sdp"
            app:layout_constraintTop_toBottomOf="@id/languagesLayout" />


        <Button
            android:id="@+id/logoutBtn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            android:backgroundTint="@color/colorAccent"
            android:padding="@dimen/_8sdp"
            android:text="@string/logout"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            app:cornerRadius="@dimen/_25sdp"
            app:layout_constraintTop_toBottomOf="@id/changePassBtn" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>